--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="src/assets/img/Logo.png " />
-    <link rel="stylesheet" href="src/index.css">
+<!-- <link rel="stylesheet" href="src/index.css"> -->    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestor Hoteles Kinal</title>
   </head>
